[tool.poetry]
name = "CobaltIdahoMap"
version = "0.1.0"
description = ""
authors = ["poilobo <sean.a.campbell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.6"
basemap = "^1.3.6"
basemap-data-hires = "^1.3.2"
pyproj = "^3.4.1"
geos = "^0.2.3"
proj = "^0.2.0"
Cartopy = "0.20.2"
geoviews = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"
mypy = "^1.0.1"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
